--- a/Pragma.Framework/Pragma.Files/FileExtensions.resx
+++ b/Pragma.Framework/Pragma.Files/FileExtensions.resx
@@ -117,34 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Attention" xml:space="preserve">
-    <value>Atenção!</value>
-  </data>
-  <data name="Copy" xml:space="preserve">
-    <value>Copiar</value>
-  </data>
-  <data name="Delete" xml:space="preserve">
-    <value>Excluir</value>
-  </data>
-  <data name="Edit" xml:space="preserve">
-    <value>Alterar</value>
-  </data>
-  <data name="Exporting" xml:space="preserve">
-    <value>Exportando dados...</value>
-  </data>
-  <data name="Loading" xml:space="preserve">
-    <value>Carregando</value>
-  </data>
-  <data name="New" xml:space="preserve">
-    <value>Novo</value>
-  </data>
-  <data name="Required" xml:space="preserve">
-    <value>Este campo deve ser preenchido</value>
-  </data>
-  <data name="Saving" xml:space="preserve">
-    <value>Salvando</value>
-  </data>
-  <data name="WantToDelete" xml:space="preserve">
-    <value>Deseja excluir o item selecionado?</value>
+  <data name="Excel" xml:space="preserve">
+    <value>Excel|*.xls</value>
   </data>
 </root>
